# PyBiksCube

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
PyBiksCube/: __init__.py  create_lookup_table.py  create_solution_algorithm.py  cube.py  cube_lookup.py  example.py  lookup_table_maker.py  piece.py  produce_mc_data.py  produce_mc_data_lookup.py  solver.py  utilities.py
tests/: test_converter.py  test_cube.py  test_cube_lookup.py  test_piece.py  test_solver.py
