[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "PyBiksCube"
version = "0.1.0"
authors = ["Daniel Smith"]
description = "Rubik's Cube Package"
readme = "README.md"

[tool.poetry.dependencies]
numpy = ">=1.23.5"
matplotlib = ">=3.7.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
pylint = ">=2.16.2"
black = ">=23.1.0"